--- a/GitHub_1/index.html
+++ b/GitHub_1/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ini Halaman HTML Akun GitHub</title>
 </head>
 <body>
     <h1>Haloo semuanya...!!!</h1>
+    <h2>Nama aku Afiana Nurani</h2>
 </body>
 </html>
