--- a/GitHub_1/index.html
+++ b/GitHub_1/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Haloo semuanya...!!!</h1>
     <h2>Nama aku Afiana Nurani</h2>
+    <h3>dari program studi Sistem Informasi</h3>
 </body>
 </html>
